--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Anurag's Portfolio</h1>
-        <h2>I'm a Web Deverloper</h2>
+        <h2>I'm a Web Developer</h2>
         <hr>
         <h3><a href="./public/mr.html">Movie Ranking Project</a></h3>
         <img src="./assets/images/mr.png" height="300" alt="Preview of the Movie Ranking Project"/>
